--- a/contactme.css
+++ b/contactme.css
@@ -17,13 +17,22 @@ h3  {font-size: 50px;
 	font-weight: bolder;
 	line-height: 40px;
 	font-family: 'Amatic SC', cursive;
-	text-align: left; auto}
+	text-align: center; auto}
 	
 
 div {border: 4px solid #339966;
 	 padding: 10px;
-	 width: 500px;
-	 margin: 50px auto;
-	 border-radius: 20px;
+	 width: 510px;
+	 margin: 40px auto;
+	 border-radius: 30px;
 	 text-align: left; auto
-	 font-family: 'Amatic SC', cursive; color: #FF0066;}	
+	 font-family: 'Amatic SC', cursive; 
+	 color: #FF0066;
+	}
+
+ol {text-align: center;
+	font-family: 'Amatic SC', cursive;
+	font-size: 30px;
+	color: green;}
+
+input {function say thank you}	
